--- a/airline/src/main/java/skyglide/Scene1.css
+++ b/airline/src/main/java/skyglide/Scene1.css
@@ -18,3 +18,12 @@
     -fx-background-color : rgb(49, 12, 185) ;
 
 }
+
+#Sign_Admin {
+
+    
+    -fx-background-color : rgb(63, 4, 75) ;
+    -fx-font-size : 20px ;
+    
+
+}
